[gd_scene load_steps=4 format=3 uid="uid://ca3lrt0stigf4"]

[ext_resource type="Script" uid="uid://v6po5xxp71km" path="res://Tiles/tile.gd" id="1_6dt0t"]
[ext_resource type="Texture2D" uid="uid://cjnw6dx0vb0nx" path="res://2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" id="1_dhj2r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dt0t"]
size = Vector2(16, 16)

[node name="Tile" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_6dt0t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dhj2r")
region_enabled = true
region_rect = Rect2(32, 32, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_6dt0t")

[node name="KillArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillArea"]
shape = SubResource("RectangleShape2D_6dt0t")
disabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="KillArea" to="." method="_on_kill_area_body_entered"]
